# dragonlight-router

./: .bandit.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION.md  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  RT-001_summary.txt  RT-005_summary.txt  SECURITY.md  TASK_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  analyze_standards.py  analyze_tests.py  cascade-router-references-2.jsonl  cascade-router-references.jsonl  current-status-06-08-2026.md  delta-spec.jsonl  docker-compose.yml  handoff-dragonlight-router-oss-release.md  live-spec.jsonl  live-spec.md  llms.txt  mkdocs.yml  pyproject.toml  requirements-hashed.txt  spectrography_plan.md  test_cbr_simple.py  test_changes.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  confirmed-issue.md
.github/workflows/: ci.yml  docs.yml  release.yml
.hermes/plans/: 2026-06-09_142230-implement-remaining-live-spec-tasks.md
config/: matrix_lifecycle.json  model_flavor_profiles.yaml  model_role_matrix.json  model_spectrograph_profiles.yaml  provider_catalog.json  router.yaml  spectrography_candidates.json
docs/: api-reference.md  architecture.md  cli.md  configuration.md  contributing.md  current-state-2026-06-16.md  deployment-runbook.md  deployment.md  getting-started.md  hazard-register.md  index.md  openapi.yaml  providers.md  security.md  spectrography.md
docs/adr/: 001-result-type-pattern.md  002-provider-adapter-pattern.md  003-cascade-dispatch-design.md  004-hosted-platform-decision.md
docs/audit/: fianna-audit-2026-06-24.md
docs/design/: factory-router-service-boundary.md  ibr-cascade-activation.md  router-as-llm-proxy.md
docs/live-specs/: calibration-audit-v0.1.0-spec.md  delta-spec.jsonl  delta-spec.md  dogfood-benchmark-v0.1.0-spec.md  dragonlight-router-v0.3.0-spec.md  intent-based-router-v0.1.0-spec.md  model-flavor-discovery-v0.1.0-spec.md  model-pinning-v0.1.0-spec.md  model-spectrography-v0.1.0-spec.md
docs/live-specs/archive/: delta-spec-v0.2.0-cycle.jsonl
docs/plans/: intent-classification-layer.md  model-flavor-discovery.md  rt-004-mypy-plan.md  rt-012-tpm-tracking-plan.md  rt-013-mbr-plan.md  rt-014-cbr-plan.md  rt-016-dispatch-cascade-plan.md
spectrography_results/: check_status.sh
spectrography_results/20260620-081408-3c463632/: checkpoint.jsonl
spectrography_results/20260620-081616-aeda4e98/: checkpoint.jsonl  fingerprints.yaml  report.json  summary.md
spectrography_results/20260621-025440-95a8498c/: checkpoint.jsonl  fingerprints.yaml  report.json  summary.md
spectrography_results/20260621-025441-d59b390e/: checkpoint.jsonl
spectrography_results/20260621-025458-6e33277c/: checkpoint.jsonl  fingerprints.yaml  report.json  summary.md
spectrography_results/20260621-025642-363db5d4/: checkpoint.jsonl  fingerprints.yaml  report.json  summary.md
spectrography_results/20260621-025645-926fbf32/: checkpoint.jsonl
spectrography_results/20260621-025704-e31b5ce0/: checkpoint.jsonl  fingerprints.yaml  report.json  summary.md
spectrography_results/20260621-162717-0f3c7b83/: checkpoint.jsonl
spectrography_results/20260621-174247-a0709965/: checkpoint.jsonl
spectrography_results/20260622-200424-74716cff/: checkpoint.jsonl  fingerprints.yaml  report.json  summary.md
spectrography_results/20260622-201018-fc2b54a8/: checkpoint.jsonl  fingerprints.yaml  report.json  summary.md
spectrography_results/20260622-223253-b011ad3d/: checkpoint.jsonl  fingerprints.yaml  report.json  summary.md
src/dragonlight_router/: __init__.py  result.py  router.py  scoring.py
src/dragonlight_router/adapters/: __init__.py  _openai_compat.py  anthropic.py  cerebras.py  cohere.py  google.py  groq.py  local.py  mistral.py  nvidia.py  openai.py  openrouter.py  together.py
src/dragonlight_router/benchmark/: __init__.py  calibration_audit.py  dogfood.py  judge.py  prompts.py  runner.py
src/dragonlight_router/budget/: persistence.py  persistence.py.backup  tracker.py
src/dragonlight_router/caching/: semantic.py  simple.py  store.py
src/dragonlight_router/catalog/: __init__.py  cache.py  cache.py.backup  refresher.py  refresher.py.backup_final
src/dragonlight_router/cli/: __init__.py  matrix_cli.py  probe_cli.py  status_cli.py
src/dragonlight_router/config/: loader.py  loader.py.backup  schema.py
src/dragonlight_router/core/: errors.py  registry.py  state.py  types.py  types.py.bak  validation.py
src/dragonlight_router/discovery/: analyzer.py  lifecycle.py  probes.py  runner.py
src/dragonlight_router/dispatch/: cascade.py  pinned.py
src/dragonlight_router/health/: check_loop.py  circuit_breaker.py  health_db.py  (+1 more)
tests/: conftest.py
tests/acceptance/: test_router_acceptance.py
tests/contracts/: test_adapter_contracts.py  test_api_contracts.py  test_config_contracts.py  test_result_contracts.py
tests/integration/: test_cascade_dispatch.py  test_catalog_resilience.py  test_circuit_breaker.py  test_e2e_dispatch.py  test_fallback_chain.py
tests/smoke/: test_live_providers.py  test_server_smoke.py
tests/strategies/: __init__.py  core.py  intent.py
tests/unit/: conftest.py  test_adapter_isolation.py  test_admin_auth.py  test_app_coverage.py  test_auto_catalog_refresh.py  test_auto_populate.py  test_benchmark.py  test_benchmark_runner_full.py  test_budget_tracker.py  test_caching.py  test_calibration_audit_full.py  test_cascade.py  test_catalog.py  test_cbr.py  test_check_loop.py  test_circuit_breaker.py  test_circuit_breaker_jitter.py  test_classifier.py  test_complexity.py  test_config.py  test_context_filter.py  test_cost_ceiling.py  test_discovery.py  test_feedback.py  test_feedback_extra.py  test_flavor.py  test_generative.py  test_health_tracker.py  test_ibr_cascade_activation.py  test_ibr_integration.py  test_ibr_types.py  test_interleave.py  test_lbr.py  test_lifecycle.py  test_matrix_cli.py  test_matrix_updater.py  test_metrics.py  test_middleware.py  test_model_pinning.py  test_new_features.py  (+27 more)
(+44 files in other folders)
