[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragonlight-router"
version = "0.2.6"
description = "Multi-provider intelligent routing — model selection + cascade dispatch"
license = {text = "MIT"}
authors = [{name = "Korrigon @ Dragonlight International"}]
keywords = ["llm", "routing", "ai", "multi-provider", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "httpx==0.28.1",
    "structlog==25.5.0",
]

[project.optional-dependencies]
server = ["starlette==1.0.0", "uvicorn==0.44.0"]
adapters = ["openai==2.32.0"]
cache = ["aiosqlite==0.22.1"]
all = ["dragonlight-router[server,adapters,cache]"]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-timeout==2.4.0",
    "hypothesis==6.152.1",
    "mypy==1.20.2",
    "ruff==0.15.12",
    "bandit==1.9.4",
]

[project.scripts]
dragonlight-router = "dragonlight_router.server.app:main"

[project.urls]
Homepage = "https://github.com/dragonlightintl/dragonlight-router"
Repository = "https://github.com/dragonlightintl/dragonlight-router"
Issues = "https://github.com/dragonlightintl/dragonlight-router/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=dragonlight_router --cov-report=term-missing --cov-fail-under=80"
timeout = 60
timeout_method = "signal"
markers = [
    "live: marks tests that hit real provider APIs (deselect with '-m \"not live\"')",
]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "D100", "D101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101"]

[tool.bandit]
targets = ["src/dragonlight_router"]
skips = ["B101", "B603"]

[tool.setuptools.packages.find]
where = ["src"]
